# template_cpp

./: CMakeLists.txt  README.md
src/include/: sample.h
src/sources/: sample.cpp
src/test/: main_script.cpp
